--- a/src/main/resources/templates/cat-care-info.html
+++ b/src/main/resources/templates/cat-care-info.html
@@ -123,6 +123,7 @@
                             <a class="dropdown-item" th:href="@{/pets-care/admin/members}">회원 관리</a>
                             <a class="dropdown-item" th:href="@{/pets-care/admin/reservations}">예약 관리</a>
                             <a class="dropdown-item" th:href="@{/pets-care/admin/amounts}">포인트 내역 관리</a>
+                            <a class="dropdown-item" th:href="@{/pets-care/admin/pet-hospitals}">동물 병원 정보 관리</a>
                         </div>
                         <div class="dropdown-divider"></div>
                         <a href="#" class="dropdown-item text-danger" onclick="event.preventDefault(); document.getElementById('logoutForm').submit();">로그아웃</a>
@@ -144,7 +145,7 @@
     </div>
 </nav>
 
-<header class="jumbotron text-center bg-warning text-white">
+<header class="jumbotron text-center bg-dark text-white">
     <h1 class="display-4">우리 고양이를 위한 최상의 케어</h1>
     <p class="lead">전문 펫시터와 함께하는 안심 돌봄 서비스</p>
 </header>
@@ -166,7 +167,7 @@
     </div>
 </section>
 
-<section class="bg-light py-5">
+<section class="bg py-5">
     <div class="container">
         <h2 class="text-center mb-4">우리 서비스의 장점</h2>
         <div class="row">
